# VectorDB_Stress_Tester

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: demo.json
src/vdbt/: cli.py  config.py  logging.py  metrics.py  report.py  runner.py
src/vdbt/adapters/: base.py  faiss_adapter.py  qdrant_adapter.py
src/vdbt/scenarios/: base.py  hybrid_query.py  multivector_longctx.py  noise_injection.py  scale_curve.py  update_delete_storm.py
src/vdbt/utils/: data.py  hybrid.py  timing.py
tests/integration/adapters/: test_faiss_adapter.py  test_qdrant_adapter.py
tests/integration/scenarios/: test_hybrid_query.py  test_multivector_longctx.py  test_noise_injection.py  test_scale_curve.py  test_update_delete_storm.py
tests/unit/: test_config.py  test_metrics.py
tests/unit/utils/: test_data.py  test_hybrid.py  test_timing.py
